--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html lang="en"><head><title></title><link rel="stylesheet" href="styles.css"><script src="main.js" defer type="module"></script></head><body><div id="output"></div><div id="input"><span>>&nbsp;</span><input type="text"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title></title>
+		<link rel="stylesheet" href="styles.css">
+		<script src="main.js" defer type="module"></script>
+	</head>
+	<body>
+        <div id="bar">Terminal Points: 0</div>
+		<div id="output"></div>
+		<div id="input"><span>>&nbsp;</span><input type="text"></div>
+	</body>
+</html>
